@@ -1,7 +1,10 @@
+2008-12-02 Frank Naegler  <typo3@naegler.net>
+
+	* bugfix for empty request in tx_community_controller_SearchApplication->searchAction
+
 2008-12-01 Frank Naegler  <typo3@naegler.net>
 
 	* refactoring of tx_community_controller_userprofile_ProfileActionsWidget: use the class instance of localizationManager instead initialize it in every method
-
 
 2008-11-25 Ingo Renner  <ingo@typo3.org>
 
